# RuleBookAssistant

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.py  requirements.txt  supported_games.json
mlruns/0/: meta.yaml
mlruns/253404441540858803/: meta.yaml
mlruns/253404441540858803/04972872c63743f781aa07e973e85e01/: meta.yaml
mlruns/253404441540858803/04972872c63743f781aa07e973e85e01/artifacts/: temp_context.txt  temp_response.txt
mlruns/253404441540858803/04972872c63743f781aa07e973e85e01/metrics/: num_docs  num_queries  response_length
mlruns/253404441540858803/04972872c63743f781aa07e973e85e01/tags/: mlflow.runName
mlruns/253404441540858803/4479a3fc0f3b4c3da24bc3b216f56123/: meta.yaml
mlruns/253404441540858803/59b62d39fc794d3983d67537e5b0a83e/: meta.yaml
mlruns/253404441540858803/a57738c35d1348a79d8fcf49e0d8d8d7/: meta.yaml
mlruns/253404441540858803/ba8d86b943964101928ed927d26c9455/: meta.yaml
mlruns/253404441540858803/d406518ee2194e848a562ae24eb5d99b/: meta.yaml
mlruns/253404441540858803/da0ca22d4d424fca825be6d84ebbed96/: meta.yaml
mlruns/253404441540858803/e3fe1f424c774b948c74821172722796/: meta.yaml
mlruns/253404441540858803/eb1fe3c55a1a42878b8e7c43b2ed67c5/: meta.yaml
mlruns/253404441540858803/fe9c4f885f6e49b181b7db477c65b519/: meta.yaml
sandbox/: sandbox.ipynb
scripts/: index.py
src/rag/: config_schema.py  generation.py  indexing.py  langchain_callback.py  ml_tracking.py  query_construction.py  query_translation.py  retrieval.py  tracing.py
(+56 files in other folders)
