[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rulebook-assistant"
version = "0.1.0"
description = "A modular RAG pipeline for tabletop games like D&D and Monopoly."
requires-python = ">=3.9"
readme = "README.md"

dependencies = [
    "langchain-community",
    "langchain-chroma",
    "langchain-pinecone",
    "langchain-openai",
    "langchain",
    "chromadb",
    "pypdf",
    "pinecone",
    "tiktoken",
    "cryptography>=3.1"
]

[tool.setuptools]
packages = ["rag", "config"]
package-dir = {"" = "src", "config" = "config"}
